@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-09T00:40:23Z",
-  "count_outdated" : 17,
-  "uniques_outdated" : 12,
+  "timestamp" : "2022-05-10T00:39:14Z",
+  "count_outdated" : 18,
+  "uniques_outdated" : 13,
   "count" : 27,
   "uniques" : 21,
   "clones" : [
-    {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-01T00:00:00Z",
       "count": 2,
