@@ -1,12 +1,7 @@
 {
-  "count": 10,
+  "count": 9,
   "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-01T00:00:00Z",
       "count": 2,
