@@ -1,3 +1,9 @@
+2022-05-10T00:39:14Z:
+* notice: last 14d: all unq: 9 6
+* notice: prev accum: outdated-all outdated-unq / all unq: 17 12 / 27 21
+* notice: next accum: outdated-all outdated-unq / all unq: 18 13 / 27 21
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-05-09T00:40:23Z:
 * notice: last 14d: all unq: 10 6
 * notice: prev accum: outdated-all outdated-unq / all unq: 17 12 / 26 20
